# SPOT

./: .gitignore  .gitmodules  README.md  install_descriptions  pot  requirements.txt  testfile
explore/: CMakeLists.txt  README.md  package.xml
explore/action/: Explore.action  ExploreFrontiers.action
explore/launch/: explore.launch  full_explore.launch
explore/src/: explore.py  explore_env.py  explore_script.py
human_interaction/: CMakeLists.txt  README.md  package.xml  requirements.txt
human_interaction/config/: recognize_speech.yaml
human_interaction/launch/: bracelet_gui.launch  conversation_client.launch  conversation_server.launch  recognize_speech.launch
human_interaction/scripts/: bracelet_gui.py  recognize_speech.py  recognize_speech_client.py
motion_control/: CMakeLists.txt  README.md  package.xml
motion_control/launch/: motion_control.launch
motion_control/src/: motion_control.py
rrt/: CMakeLists.txt  README.md  map_final.yaml  package.xml  requirements.txt
rrt/launch/: full_rrt.launch  planning_msg.launch  rrt.launch  yaml.launch
rrt/src/: rrt_msg_node.py  rrt_path.py  yaml_to_map.py
rrt_msg/: CMakeLists.txt  package.xml
rrt_msg/src/: rrt_msg_node copy.py  rrt_msg_node.py
slam/: CMakeLists.txt  README.md  package.xml
state_machine/: CMakeLists.txt  README.md  package.xml  requirements.txt
trajectory/: CMakeLists.txt  README.md  package.xml
yolo/: CMakeLists.txt  README.md  package.xml  requirement.txt
yolo/launch/: world_spot.launch
yolo/msg/: DetectionInfo.msg
yolo/src/: arm_detection.py  yolo_detection.py
(+29 files in other folders)
